# BallsAI

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
airflow/: dag.py
airflow/dags/: nba.py
config/: settings.py
dags/: data_collection_dag.py  data_collection_dag_test.py  feature_engineering_dag.py  feature_engineering_dag_test.py  infrastructure_dag.py  infrastructure_dag_test.py  master_orchestration_dag.py  model_training_dag.py  model_training_dag_test.py  prediction_dag.py  prediction_dag_test.py
dags/utils/: __init__.py  common_utils.py  internal_unit_testing.py
data/: collector.py  dataproc.py  sample.py  schema.py  spark.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: head_to_head_stats.sql  player_season_stats.sql  player_value_analytics.sql  recent_player_performance.sql  (+2 more)
docker/: Dockerfile.airflow  Dockerfile.api
frontend/: .gitignore  package.json  pnpm-lock.yaml  turbo.json
k8s/: airflow.yaml  fastapi.yaml  minio.yaml  postgres.yaml
ml/: training.py
models/: feature_scaler.pkl  game_predictor_best.pth  game_predictor_final.pth  nba_models_trained.pth  player_feature_cols.pkl  player_feature_scaler.pkl  player_projector_best.pth  player_projector_final.pth
notebooks/: models.py
scripts/: deploy.sh  init_database.py  test_api.py  train_models.py
src/analytics/: spark_jobs.py
src/api/: main.py  schemas.py
src/models/: database.py  prediction_model.py
src/utils/: client.py  loader.py  transformer.py
tests/: conftest.py  test_api.py
(+90 files in other folders)
