[project]
name = "nba-pipeline"
version = "0.1.0"
description = "NBA Data Engineering and ML Pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.104.0",
    "apache-airflow[postgres,redis]>=2.7.0",
    "nba-api>=1.4.1",
    "dbt-postgres>=1.6.0",
    "pyspark>=3.5.0",
    "torch>=2.1.0",
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "scikit-learn>=1.3.0",
    "sqlalchemy",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "minio>=7.2.0",
    "kubernetes>=28.1.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src"]
